--- a/Ychat/app/src/main/res/layout/activity_login.xml
+++ b/Ychat/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,16 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
+
     tools:context="com.yd.ychat.act.LoginActivity">
 
     <!-- Login progress -->
+
     <ProgressBar
+        android:layout_centerHorizontal="true"
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
@@ -19,12 +18,16 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
 
+
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/login_progress">
 
         <LinearLayout
+            android:layout_gravity="center"
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,8 +42,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
+                    android:inputType="text"
                     android:maxLines="1"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
@@ -54,6 +60,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
+                    android:layout_marginLeft="16sp"
+                    android:layout_marginRight="16sp"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
@@ -63,15 +71,70 @@
 
             </android.support.design.widget.TextInputLayout>
 
+
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_margin="16dp"
                 android:text="@string/action_sign_in"
+                android:background="@drawable/login_btn_style"
                 android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login_forget"
+                    android:layout_marginLeft="16dp"
+                    android:clickable="true"
+                    android:textColor="@color/login_text"
+
+                    android:id="@+id/login_forget"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                   />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login_register"
+                    android:gravity="right"
+                    android:textColor="@color/login_text"
+                    android:clickable="true"
+                    android:layout_marginRight="16dp"
+                    android:id="@+id/login_register"/>
+            </LinearLayout>
 
         </LinearLayout>
+
     </ScrollView>
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/login_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/login_progress">
+        <CheckBox
+            android:id="@+id/login_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_read"
+            android:checked="true"
+            />
+        <TextView
+            android:id="@+id/login_service_clause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:textColor="@color/login_text"
+            android:text="@string/login_service_clause"/>
+    </LinearLayout>
+
+
+</RelativeLayout>
