--- a/Ychat/app/src/main/res/values/styles.xml
+++ b/Ychat/app/src/main/res/values/styles.xml
@@ -6,6 +6,19 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="homeAsUpIndicator">@drawable/fh</item>
+        <item name="actionOverflowButtonStyle">@style/genduo</item>
+
     </style>
+    <style name="MyTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+<style name="genduo">
+    <item name="android:src">@drawable/gd</item>
+</style>
 
 </resources>
