--- a/Ychat/app/src/main/res/layout/message_fragment_image.xml
+++ b/Ychat/app/src/main/res/layout/message_fragment_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="280dp"
     android:orientation="vertical"
     >
     <android.support.v7.widget.RecyclerView
@@ -9,9 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button
+        android:layout_marginRight="5dp"
+        android:background="#27b5ea"
         android:id="@+id/image_send"
         android:layout_width="70dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_gravity="right"
         android:text="发送"
         />
