--- a/Ychat/app/src/main/res/layout/fragment_set.xml
+++ b/Ychat/app/src/main/res/layout/fragment_set.xml
@@ -2,10 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <EditText
+        android:id="@+id/main_edit_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
+    <EditText
+        android:id="@+id/main_edit_cotent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <Button
         android:text="Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/main_edit" />
+        android:id="@+id/send" />
 </LinearLayout>
