--- a/Ychat/app/src/main/res/layout/item_chat_massage_image.xml
+++ b/Ychat/app/src/main/res/layout/item_chat_massage_image.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_chat_message_image_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
