--- a/Ychat/app/src/main/res/layout/activity_chat_details.xml
+++ b/Ychat/app/src/main/res/layout/activity_chat_details.xml
@@ -27,7 +27,7 @@
             <EditText
                 android:id="@+id/chat_edit_msg_content"
                 android:layout_width="0dp"
-
+                android:maxLines="3"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:background="#ffffff"
