--- a/Ychat/app/src/main/res/layout/activity_group.xml
+++ b/Ychat/app/src/main/res/layout/activity_group.xml
@@ -29,13 +29,18 @@
             android:text="创建群聊"/>
     </LinearLayout>
 
-
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swiperefresh_grouplist"
+    android:layout_width="match_parent"
+    android:layout_marginTop="25dp"
+    android:layout_height="wrap_content">
     <ListView
         android:id="@+id/group_grouplist"
         android:background="@color/login_btn_down"
-        android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+</android.support.v4.widget.SwipeRefreshLayout>
+
 
 
 
