--- a/Ychat/app/src/main/res/layout/fragment_contacts.xml
+++ b/Ychat/app/src/main/res/layout/fragment_contacts.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/cantacts_iv_newfriend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/xpy"
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/cantacts_iv_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ql"
