--- a/Ychat/app/src/main/res/layout/item_chat_massage_image.xml
+++ b/Ychat/app/src/main/res/layout/item_chat_massage_image.xml
@@ -2,32 +2,47 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_chat_message_image_lay"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp">
 
     <LinearLayout
         android:id="@+id/chat_message_image_lay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:id="@+id/item_chat_left_iv_lay"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/icon" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+        <TextView
+            android:text="1231"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/group_username_image"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/icon" />
+    </LinearLayout>
+        <ImageView
+            android:background="@drawable/message_image_style"
+            android:id="@+id/item_chat_msg_iv_left"
+            android:layout_width="190dp"
+            android:layout_height="260dp"
+             />
 
-            <ImageView
-                android:id="@+id/item_chat_msg_iv_left"
-                android:layout_width="190dp"
-                android:layout_height="260dp"
-                android:maxWidth="240dp"
-                android:src="@mipmap/icon" />
+
 
         </LinearLayout>
 
@@ -39,11 +54,12 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:background="@drawable/message_image_style"
                 android:id="@+id/item_chat_msg_iv_right"
                 android:layout_width="190dp"
                 android:layout_height="260dp"
-                android:maxWidth="240dp"
-                android:src="@mipmap/icon" />
+
+                 />
 
             <ImageView
                 android:layout_width="wrap_content"
