--- a/Ychat/app/src/main/res/layout/item_chat_massage_txt.xml
+++ b/Ychat/app/src/main/res/layout/item_chat_massage_txt.xml
@@ -18,25 +18,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:visibility="visible" >
-
-            <ImageView
-                android:layout_gravity="center_vertical"
-                android:id="@+id/chatfrom_icon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@mipmap/icon" />
-
             <TextView
-                android:padding="8dp"
-                android:id="@+id/item_chat_msg_tv_left"
+                android:layout_marginLeft="5dp"
+                android:text="123"
+                android:id="@+id/group_username_txt"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/chat_details"
-                android:gravity="center_vertical"
-                android:textColor="@color/gray"
-                android:textSize="20sp" />
+                android:layout_height="wrap_content" />
+<LinearLayout
+
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_gravity="center_vertical"
+        android:id="@+id/chatfrom_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@mipmap/icon" />
+    <TextView
+        android:padding="8dp"
+        android:id="@+id/item_chat_msg_tv_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/chat_details"
+        android:gravity="center_vertical"
+        android:textColor="@color/gray"
+        android:textSize="20sp" />
+</LinearLayout>
+
+
+
         </LinearLayout>
 
         <RelativeLayout
