--- a/Ychat/app/src/main/res/layout/item_chat_massage_video.xml
+++ b/Ychat/app/src/main/res/layout/item_chat_massage_video.xml
@@ -10,23 +10,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <ImageView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/icon" />
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/group_username_video"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/icon" />
+        </LinearLayout>
+
 
         <RelativeLayout
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <ImageView
+                android:background="@drawable/message_image_style"
                 android:id="@+id/item_chat_message_video_image_left"
                 android:layout_width="180dp"
                 android:layout_height="240dp"
                 android:maxWidth="240dp"
-                android:src="@drawable/ecd" />
+                />
 
             <ImageView
                 android:layout_width="40dp"
@@ -43,15 +55,17 @@
         android:layout_alignParentRight="true"
         android:orientation="horizontal">
         <RelativeLayout
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             >
             <ImageView
+                android:background="@drawable/message_image_style"
                 android:id="@+id/item_chat_message_video_image_right"
                 android:layout_width="180dp"
                 android:layout_height="240dp"
                 android:maxWidth="240dp"
-                android:src="@drawable/ecd" />
+                 />
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
