--- a/Ychat/app/src/main/res/menu/menu_group_message.xml
+++ b/Ychat/app/src/main/res/menu/menu_group_message.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/chatInfo"
-        android:icon="@drawable/chat"
+        android:id="@+id/groupInfo"
+        android:icon="@drawable/group"
         app:showAsAction="always"
         android:title="item1"/>
 
